<?xml version="1.0"?>
<package format="3">
  <name>obstacle_distance</name>
  <version>0.0.1</version>
  <description>ROS 2 package to publish obstacle distance data to PX4.</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
