<?xml version="1.0"?>
<package format="3">
  <name>rov_manual_cpp</name>
  <version>0.0.1</version>
  <description>Manual rover control bridge node: republishes RC/joystick input as rover setpoints</description>
  <maintainer email="vinothpandiyan@hotmail.com">Vinoth Pandiyan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
