<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_ekf_bridge</name>
  <version>1.0.0</version>
  <description>Feeds wheel odometry velocity to PX4 EKF2 as an external-vision measurement so local position/velocity are valid indoors without GPS</description>
  <maintainer email="vind@todo.todo">vind</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>px4_ros2_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
