<package format="3">
  <name>tfmini_sensor</name>
  <version>0.0.0</version>
  <description>ROS 2 package for TFmini distance sensor</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
