<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_streaming</name>
  <version>0.0.0</version>
  <description>ROS 2 package for vision streaming with FFmpeg and camera switching</description>
  <maintainer email="vind@todo.todo">vind</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build and runtime dependencies -->
  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>setuptools</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
